--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.3.1
+beautifulsoup4==4.9.3
 certifi==2020.12.5
 cloudinary==1.25.0
 dj-database-url==0.5.0
-Django==2.1.7
+Django==3.1.7
 django-bootstrap3==14.2.0
+django-bootstrap4==2.3.1
+django-crispy-forms==1.11.2
 django-heroku==0.3.1
 gunicorn==20.1.0
 Pillow==8.1.2
@@ -11,6 +14,7 @@ psycopg2==2.8.6
 python-decouple==3.4
 pytz==2021.1
 six==1.15.0
+soupsieve==2.2.1
 sqlparse==0.4.1
 urllib3==1.26.4
 whitenoise==5.2.0
