--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-bootstrap3==14.2.0
 django-bootstrap4==2.3.1
 django-crispy-forms==1.11.2
 django-heroku==0.3.1
+djangorestframework==3.12.4
 gunicorn==20.1.0
 Pillow==8.1.2
 psycopg2==2.8.6
